# imxInsights

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: build.yml  publish-wheel.yml
docs/context/: installation.md
docs/examples/: basic_use.md
docs/examples/basic_use/: containerImx_main.py  singleImx_main.py
docs/reference/: containerized_imx.md  imx_file.md  imx_object.md  single_file_imx.md
docs/reference/compair/: imx_compair.md  imx_compair_enum.md
docs/reference/exceptions/: exceptions.md  exceptions_handler.md  exceptions_imx.md
docs/reference/repo/: config.md  imx_repo.md  repo_builders.md  repo_exceptions.md
docs/stylesheets/: extra.css
imxInsights/: __init__.py
imxInsights/compair/: compairField.py  compairMultiRepo.py  compairObject.py  compairStatusEnum.py
imxInsights/domain/: imxObject.py
imxInsights/domain/containerizedImx/: imxContainer.py  imxContainerFile.py  imxContainerFileReference.py  imxContainerMetadata.py
imxInsights/domain/singleFileImx/: imxSingleFile.py
imxInsights/exceptions/: customException.py  exceptionHandler.py  exceptionLevels.py  imxExceptions.py
imxInsights/file/containerizedImx/: imxContainer.py  imxContainerFile.py  imxContainerFiles.py
imxInsights/file/singleFileImx/: imxSingleFile.py  imxSituation.py
imxInsights/imxContainer/: __init__.py  config.py  imxConainer.py  imxMultiContainer.py
imxInsights/imxContainer/builders/: addChildren.py  addRefs.py  buildExceptions.py  buildRailConnections.py  extendObjects.py
imxInsights/imxContainer/imx/: imxContainer.py
imxInsights/imxContainer/imx12/: imx12Container.py  imx12ContainerMetadata.py
imxInsights/imxContainer/tree/: imxMulitObjectTree.py  imxObjectTree.py  imxTreeObject.py
imxInsights/imxDomain/: areas.py  imxEnums.py  imxGeographicLocation.py  imxRef.py  imxSituationChanges.py
imxInsights/imxDomain/railConnection/: imxRailConnection.py
imxInsights/imxFile/: imx12File.py  imx12FileReference.py  imxFile.py  imxSituationFile.py
imxInsights/repo/: __init__.py  config.py  imxMultiRepo.py  imxRepo.py
imxInsights/repo/tree/: imxMultiObjectTree.py  imxObjectTree.py
imxInsights/utils/: helpers.py  profiler.py  shapley_helpers.py  singleton.py  xmlFile.py  xml_helpers.py
sample_data/500/: basic_500.xml
tests/: helpers.py  test_container.py  test_diff.py  test_imx_files.py  test_logger.py
tests/fixtures/: files.py  imx_files.py
(+4 files in other folders)
